[package]
name = "orientation_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
clap = { version = "4.5.48", features = ["derive"] }
colog = "1.4.0"
futures = "0.3.31"
log = "0.4.28"
r2r = "0.9.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
